# sparv-sbx-sentence-bert

./: .gitignore  README.md  pyproject.toml
sentence_bert/: __init__.py  sentence_bert.py
